Fixed alignment issues on the Tasks screen

--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -267,9 +267,9 @@ app-home a.btn {
   color: #fff;
   font-weight: 600;
   font-size: 1.6em;
-  padding: 12px 58px 12px 4%;
+  padding: 12px 58px 12px 6%;
   border-radius: 0 35px 35px 0;
-  margin: 12px 0 20px -4%;
+  margin: 12px 0 20px -6%;
 }
 .edit-tasks {
   float: right;
@@ -329,7 +329,7 @@ app-home a.btn {
   margin: 0 2px;
 }
 .task-list .task-list-start-button {
-  width: 25%;
+  width: 30%;
   float: left;
   margin: 14px 0 0 0;
 }
@@ -521,7 +521,7 @@ app-settings .btn-primary {
     padding: 0 5% 0%;
   }
   .content-container.tasks {
-    padding: 0 0 24%;
+    padding: 0 5% 24%;
   }
   .col-sm-9 {
     width:100% !important;
